2006-12-05 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, src/s_clib.c: Converted the clib_directories 
	  list into a double linked list and reversed the search order
	  (last added directories first).
	
2006-12-04 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_toplevel.c: Added missing init of toplevel->line_style
	(all variables in the TOPLEVEL struct ure should be initalized).

2006-12-02  Mike Jarabek  <mike@laptop.istop.com>

	* include/defines.h include/struct.h: Added
	  toplevel->line_style'. This new entry is a flag to set whether
	  or not lines are drawn really thin on the output postscript or
	  will only be drawn to the width of pins or nets.

	* src/o_arc_basic.c src/o_box_basic.c src/o_circle_basic.c
	  libgeda/src/o_line_basic.c: Changes to the postscript output
	  code to ensure that lines can't be drawn too thin.

2006-12-02 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/o_bus_basic.c: Added missing call to s_tile_update_object
	for buses.  This missing call could cause buses to not have
	correct connectivity when using grips.	Pointed out by and patch
	by Peter Clifton.

2006-11-21 Werner Hoch <werner.ho@gmx.de>

	* include/struct.h, src/s_toplevel.c: readded toplevel->filename_label
	  to the toplevel structure, it's still required by gattib.
	  fixes Bug [#1600448]
	

2006-11-19 Werner Hoch <werner.ho@gmx.de>

	* include/struct.h, src/s_toplevel.c: moved schematic title
	  from the status bar to the window title. Added grid settings
	  to the status bar:
	  replaced toplevel->filename_label with toplevel->grid_label

2006-11-01 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, src/g_smob.c: Added new "get-attribute-bounds"
	  scheme function.

2006-10-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20061020.
	
	* configure.ac: Bumped shared library version to 27:0:0

2006-10-19  Patrick Bernaud  <b-patrick@wanadoo.fr>
