@@ -3,6 +3,11 @@
 	* include/prototype.h, src/s_clib.c: Converted the clib_directories 
 	  list into a double linked list and reversed the search order
 	  (last added directories first).
+
+	* include/prototype.h, src/o_complex_basic.c:
+	  Added new function world_get_single_object_bounds to calculate
+	  the bounds of a single object, and make world_get_complex_bounds
+	  call it.
 	
 2006-12-04 Ales Hvezda   <ahvezda@geda.seul.org>
 
